@@ -153,7 +153,10 @@ class MainWindow(component.Component):
         return self.main_glade
 
     def quit(self):
-        reactor.stop()
+        if client.is_classicmode():
+            gtk.main_quit()
+        else:
+            reactor.stop()
 
     def load_window_state(self):
         x = self.config["window_x_pos"]
