@@ -7,6 +7,9 @@
 	* #1307: Fix not being able to add torrents
 	* #1293: Fix not being able to add paths that contain backslashes
 
+==== GtkUI ====
+	* Fix uncaught exception when closing deluge in classic mode
+
 ==== Execute ====
 	* #1306: Fix always executing last event
 
